# arceval

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
arceval/: __init__.py
arceval/backends/: delta.py  file.py  langfuse.py  mlflow.py  otel.py
arceval/capture/: fastapi.py  langchain.py  manual.py  mcp.py  openai_wrapper.py
arceval/cli/: init_cmd.py  main.py  monitor_cmd.py  report_cmd.py  test_cmd.py  validate_cmd.py
arceval/core/: config.py  exceptions.py  protocols.py  registry.py  tier.py  trace_model.py
arceval/monitoring/: alerts.py  continuous.py  drift.py  sampler.py
arceval/scorers/adapters/: custom.py  deepeval.py  mlflow_scorers.py  ragas.py
arceval/scorers/builtin/: error_rate.py  (+6 more)
arceval/testing/: gates.py  golden_sets.py  pytest_plugin.py  regression.py  runner.py
examples/quickstart/: arceval.yaml
tests/adapters/: test_deepeval_adapter.py  test_delta_backend.py  test_langfuse_backend.py  test_mlflow_backend.py  test_mlflow_scorer_adapter.py  test_otel_backend.py  test_ragas_adapter.py
tests/e2e/: test_cli_init.py  test_cli_monitor.py  test_cli_report.py  test_cli_test.py  test_cli_validate.py
tests/integration/: test_file_backend.py  test_monitor_loop.py
tests/unit/: test_alerts.py  test_config.py  test_drift.py  test_exceptions.py  test_fastapi_capture.py  test_gates.py  test_golden_sets.py  test_langchain_capture.py  test_manual_capture.py  test_mcp_capture.py  test_openai_capture.py  test_protocols.py  test_pytest_plugin.py  test_registry.py  test_regression.py  test_runner.py  test_sampler.py  test_tier.py  test_trace_model.py
(+8 files in other folders)
